# vivaTracker

./: CMakeLists.txt  macros.cmake  main.cpp
trackerlib/: factories.h  tracker.h  tracking_process.h
trackers/kcf/: ffttools.hpp  fhog.cpp  kcftracker.cpp  kcftracker.hpp
trackers/kcf2/: gradientMex.h  kcf.h
trackers/ncc/: ncc.h
trackers/opentld/: BlobContour.h  BlobLibraryConfiguration.h  BlobOperators.h  BlobProperties.h  BlobResult.h  Clustering.h  ComponentLabeling.h  DetectionResult.h  DetectorCascade.h  EnsembleClassifier.h  FBTrack.h  ForegroundDetector.h  ImAcq.h  IntegralImage.h  MedianFlowTracker.h  NNClassifier.h  NormalizedPatch.h  TLD.h  TLDUtil.h  VarianceFilter.h  blob.h  opentld.h
trackers/skcf/: ktrackers.h
trackers/struck/: Config.cpp  Config.h  Features.cpp  Features.h  HaarFeature.cpp  HaarFeature.h  HaarFeatures.cpp  HaarFeatures.h  HistogramFeatures.cpp  HistogramFeatures.h  ImageRep.cpp  ImageRep.h  Kernels.h  LaRank.cpp  LaRank.h  MultiFeatures.cpp  MultiFeatures.h  RawFeatures.cpp  RawFeatures.h  Rect.h  STRUCKtracker.cpp  STRUCKtracker.h  Sample.h  Sampler.cpp  Sampler.h
vivalib/: CMakeLists.txt  channel.h  direntVS.h  input.h  listener.h  output.h  utils.h  viva.h
